Chellange completed. Analysis excluding 9th grade of THS

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -788,11 +788,11 @@
    "source": [
     "# Calculate the percent that passed math.\n",
     "passing_math_percentage = passing_math_count / float(student_count) * 100\n",
-    "print(f\"Percenatge passed math {passing_math_percentage}\")\n",
+    "print(f\"Percentage passed math {passing_math_percentage}\")\n",
     "\n",
     "# Calculate the percent that passed reading.\n",
     "passing_reading_percentage = passing_reading_count / float(student_count) * 100\n",
-    "print(f\"Percenatge reading math {passing_reading_percentage}\")"
+    "print(f\"Percentage reading math {passing_reading_percentage}\")"
    ]
   },
   {
